# rovers

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  drive_base.cpp  drive_base.h  main.cpp  main_body_board.cpp  main_body_board.h  motor.cpp  motor.h  pinout.h  pyproject.toml  quad_encoder.cpp  quad_encoder.h  temp_subsystem.h  thermistor.h  wheel.cpp  wheel.h
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
communications/: CMakeLists.txt  package.xml
communications/msg/: CAN_FD_msg.msg
communications/src/: CAN.py
constants/src/: RoverPinout.py
kria-update-2023/: rover_main.py
kria-update-2023/communications/: Communications.py
kria-update-2023/hardware/: Rover.py  RoverConstants.py  RoverStatus.py
kria-update-2023/missions/: AutonomousNavigation.py  EquipmentServicing.py  ExtremeRetrievalDelivery.py  ScienceMission.py
rover-code/: ReadMe.md  rover_main.py
rover-code-kria-update-2023/: ErrorHandler.py  rover_main.py
rover-code-kria-update-2023/communications/: Communications.py  XBox_Controller.py
rover-code-kria-update-2023/controllers/: pid_controller.py
rover-code-kria-update-2023/hardware/: Rover.py  RoverConstants.py  RoverPinout.py
rover-code-kria-update-2023/missions/: AutonomousNavigation.py  EquipmentServicing.py  ExtremeRetrievalDelivery.py  MissionControl.py  Test.py
rover-code-kria-update-2023/testing/: Test.py  TestingEnvironment.py
rover-code/communications/: CAN.py
rover-code/embedded/: README.md
rover-code/hardware/: Rover.py  RoverPinout.py
rover-code/ros/: ReadMe.md
(+217 files in other folders)
